[package]
name = "Magnificent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "*", features = ["full", "fold"] }#解析--I
quote = "*"#解析--O
proc-macro2 = "*"#解析MK2
combine = "*"#字符解析
[lib]
proc-macro = true
crate_type = ["proc-macro"]
