[package]
name = "Install_src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }#:数据序列>
serde_json = "*"#:json序列>
quick-xml = { version = "*", features = ["serde", "async-tokio", "serialize"] }#:配置文件>
anyhow = "*"#:Resultj兼容处理>